syntax = "proto3";

import "google/protobuf/empty.proto";

import "weather_commons.proto";

package weather;

service WeatherForecasts {
  rpc GetWeatherForecast (google.protobuf.Empty) returns (weather_commons.GetWeatherForecastResponse);
}