syntax = "proto3";

option csharp_namespace = "GrpcBackend";

import "google/protobuf/timestamp.proto";

package weather_commons;

message WeatherForecast {
  google.protobuf.Timestamp date = 1;
  int32 temperatureC = 2;
  string summary = 3;
}

message GetWeatherForecastResponse {
  repeated weather_commons.WeatherForecast forecasts = 1;
}